updated contact form

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
       <div>
         <h3>Email NewsLetter</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <form>
-          <input type="email" placeholder="email@gmail.com">
+        <form method="POST" data-netlify="true">
+          <input type="email" name="name" placeholder="email@gmail.com">
           <input type="submit" value="subscribe" class="btn btn-primary">
         </form>
       </div>
